# timesmith

./: .gitignore  .pre-commit-config.yaml  .readthedocs  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  DOCUMENTATION_ASSESSMENT.md  MANIFEST.in  MIGRATION_UV.md  PRODUCTION_READY_CHECKLIST.md  README.md  SECURITY.md  mypi.ini  pyproject.toml  run_ci_checks.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: requirements.txt
docs/source/: api_reference.rst  api_stability.rst  architecture.rst  conf.py  design_decisions.rst  getting_started.rst  index.rst  installation.rst  troubleshooting.rst
examples/: basic_forecast.py
examples/notebooks/: 01_getting_started.ipynb  02_data_loading_preprocessing.ipynb  03_feature_engineering.ipynb  04_forecasting.ipynb  05_anomaly_detection.ipynb  06_changepoint_detection.ipynb  07_network_analysis.ipynb  08_evaluation_backtesting.ipynb  09_pipelines_composition.ipynb  10_advanced_topics.ipynb  11_production_workflow.ipynb  README.md
tests/: __init__.py  test_core_base.py  test_eval_metrics.py  test_eval_splitters.py  test_exceptions.py  test_forecasters.py  test_integration_basic.py  test_pipelines.py  test_serialization.py  test_typing_validators.py
timesmith/: __init__.py  __main__.py  exceptions.py  logging_config.py  serialization.py
timesmith/compose/: __init__.py  adapter.py  anomsmith_adapter.py  forecaster_pipeline.py  pipeline.py  union.py
timesmith/core/: __init__.py  base.py  changepoint.py  data_validation.py  decomposition.py  ensemble_detector.py  featurizers.py  filters.py  outliers.py  seasonal.py  tags.py  transformers.py  validate.py  wavelet.py
timesmith/datasets/: __init__.py  loaders.py
timesmith/eval/: __init__.py  backtest.py  comparison.py  metrics.py  splitters.py  summary.py
timesmith/examples/: __init__.py  simple_forecaster.py  simple_transformer.py
timesmith/forecasters/: __init__.py  arima.py  bayesian.py  black_scholes.py  ensemble.py  exponential_smoothing.py  kalman.py  linear_trend.py  lstm.py  monte_carlo.py  moving_average.py  prophet.py  synthetic_control.py  var.py
timesmith/network/: __init__.py  _constructors.py  causal.py  constructors.py  graph.py  metrics.py  motifs.py  multiscale.py  multivariate.py  null_models.py  roles.py  windows.py
timesmith/results/: __init__.py  backtest.py  forecast.py
timesmith/tasks/: __init__.py  detect.py  forecast.py
timesmith/typing/: __init__.py  coercion.py  protocols.py  validators.py
timesmith/utils/: __init__.py  anomsmith_compat.py  autocorrelation.py  climatology.py  confidence_intervals.py  distances.py  lag_utils.py  monte_carlo.py  plotting.py  rolling.py  sequences.py  stationarity.py  ts_utils.py
