[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timesmith"
version = "0.0.1"
description = "TimeSmith for ML models"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Kyle T. Jones", email = "kyletjones@gmail.com" }
]
maintainers = [
  { name = "Kyle T. Jones", email = "kyletjones@gmail.com" }
]

requires-python = ">=3.9"
dependencies = [
  "pandas>=1.5.0",
  "numpy>=1.20.0",
  "scipy>=1.10.0",
]

[project.optional-dependencies]
forecasters = [
  "pmdarima>=2.0.0",  # For ARIMAForecaster
  "statsmodels>=0.14.0",  # For ExponentialSmoothingForecaster
]
network = [
  "ts2net>=0.6.0",  # For network construction (HVG, NVG, etc.)
  "networkx>=3.0",  # For network metrics and analysis
]
distances = [
  "tslearn>=0.6.0",  # For optimized DTW distance (optional)
]
changepoint = [
  "ruptures>=1.1.0",  # For PELT change point detection
]
bayesian = [
  "pymc>=5.0.0",  # For Bayesian forecasting
  "arviz>=0.15.0",  # For Bayesian diagnostics and visualization
]
ensemble = [
  "scikit-learn>=1.0.0",  # For ensemble forecasting (classification + regression)
]
statsmodels = [
  "statsmodels>=0.14.0",  # For stationarity tests and advanced time series analysis
]
wavelet = [
  "PyWavelets>=1.4.0",  # For wavelet-based denoising and anomaly detection
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "flake8>=6.0",
  "mypy>=1.0",
  "ruff>=0.1.0",
]
docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=2.0",
  "sphinx-autodoc-typehints>=1.20"
]
examples = [
  "jupyter>=1.0",
  "notebook>=7.0",
  "ipykernel>=6.0",
  "matplotlib>=3.5.0",  # For plotting utilities
]
all = [
  "pmdarima>=2.0.0",
  "statsmodels>=0.14.0",
  "ts2net>=0.6.0",
  "networkx>=3.0",
  "tslearn>=0.6.0",
  "ruptures>=1.1.0",
  "pymc>=5.0.0",
  "arviz>=0.15.0",
  "scikit-learn>=1.0.0",
  "PyWavelets>=1.4.0",
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=23.0",
  "flake8>=6.0",
  "mypy>=1.0",
  "ruff>=0.1.0",
  "sphinx>=7.0",
  "sphinx-rtd-theme>=2.0",
  "sphinx-autodoc-typehints>=1.20",
  "jupyter>=1.0",
  "notebook>=7.0",
  "ipykernel>=6.0",
]

[project.urls]
Homepage = "https://github.com/kylejones200/timesmith"
Documentation = "https://timesmith.readthedocs.io/"
Repository = "https://github.com/kylejones200/timesmith"
"Bug Tracker" = "https://github.com/kylejones200/timesmith/issues"
Changelog = "https://github.com/kylejones200/timesmith/blob/main/CHANGELOG.md"

[project.scripts]
timesmith = "timesmith.__main__:main"

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["ndic_raw*"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | venv
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
pretty = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
  "-v",
  "-ra",
  "--tb=short",
  "--strict-markers",
  "--strict-config",
  "--color=yes",
  "--cov=timesmith",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--disable-warnings",
  "--durations=10",
  "--maxfail=5",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
]
filterwarnings = [
  "ignore::UserWarning",
  "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["timesmith"]
omit = [
  "*/tests/*",
  "*/test_*.py",
  "*/__pycache__/*",
  "*/venv/*",
  "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".eggs",
    "*.egg",
    "build",
    "dist",
    "examples",
    "benchmarks",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E402",  # Module level import not at top (if intentional)
    "E501",  # Line too long (handled by formatter)
    "N806",  # Variable should be lowercase (if using stats conventions)
    "N803",  # Argument should be lowercase (if using stats conventions)
]
